--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -2,22 +2,25 @@
  * Header
  */
 
-.skip-link { display: none; }
+.skip-link {
+  display: none;
+}
 
 .site-header {
-	padding: 2em 0;
-	color: #fff;
-	background-color: #333;
+  padding: 2em 0;
+  color: $wb-white;
+  background-color: $wb-gray-darker;
 }
 
 .site-title {
-	margin-top: 0;
+  margin-top: 0;
 
-	a { color: #fff; }
+  a {
+    color: $wb-white;
+  }
 }
 
 .site-description {
-	color: #aaa;
-	font-weight: normal;
+  color: $wb-white;
+  font-weight: normal;
 }
-
