--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -1,31 +1,31 @@
 /*
- * Sidebar 
+ * Sidebar
  */
 
 #secondary {
-	padding: 2em 1em 1em 1em;
-	background-color: #eee;
+  padding: 2em 1em 1em;
+  background-color: $wb-gray-lighter;
 
-	.search-submit {
-		display: none;
-	}
+  .search-submit {
+    display: none;
+  }
 
 
-	h1.widget-title {
-		font-size: $wb-font-size-h2;
-	}
+  h1.widget-title {
+    font-size: $wb-font-size-h2;
+  }
 
-	.widget-title {
-		padding-bottom: .5em;
-		margin-bottom: .5em;
-		border-bottom: 1px solid #ddd;
-	}
+  .widget-title {
+    padding-bottom: .5em;
+    margin-bottom: .5em;
+    border-bottom: 1px solid $wb-gray;
+  }
 
-	.widget {
-		ul {
-			padding-left: 0;
-			margin-left: 0;
-			list-style: none;	
-		}
-	}
+  .widget {
+    ul {
+      padding-left: 0;
+      margin-left: 0;
+      list-style: none;
+    }
+  }
 }
