--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -67,14 +67,14 @@ $wb-border-radius-small: 3px;
 
 $wb-btn-border-radius: $wb-border-radius-base;
 
-$wb-btn-small-font-size: 0.818#{$wb-base-unit};
+$wb-btn-small-font-size: .818#{$wb-base-unit};
 $wb-btn-large-font-size: 1.125#{$wb-base-unit};
 
 $wb-btn-default-bg: #bbb;
 $wb-btn-default-color: #333;
 $wb-btn-default-border: #ccc;
 
-$wb-btn-primary-bg: #0078E7;
+$wb-btn-primary-bg: #0078e7;
 $wb-btn-primary-color: lighten($wb-btn-primary-bg, 50%);
 $wb-btn-primary-border: lighten($wb-btn-primary-bg, 20%);
 
@@ -94,6 +94,9 @@ $wb-form-input-bg-color: #fff;
 $wb-form-focus-bg-color: rgb(220, 220, 220);
 $wb-form-focus-border-color: inherit;
 $wb-form-focus-font-color: inherit;
+
+// Form colors
+$wb-form-error-color: #a52a2a;
 
 // Icons
 
