--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,9 +1,9 @@
-/* 
- * Site footer 
+/*
+ * Site footer
  */
 
 .site-footer {
-	padding: 2em 0;
-	background-color: #333;
-	color: #fff;
+  padding: 2em 0;
+  background-color: $wb-gray-dark;
+  color: $wb-white;
 }
