--- a/scss/pages/_blog.scss
+++ b/scss/pages/_blog.scss
@@ -1,11 +1,11 @@
-/* 
+/*
  * Blog page
  */
 
 .blog {
-	article {
-		margin-bottom: 4em;
-		padding-bottom: 2em;
-		border-bottom: 1px dotted #ccc;
-	}
+  article {
+    margin-bottom: 4em;
+    padding-bottom: 2em;
+    border-bottom: 1px dotted $wb-gray-light;
+  }
 }
