--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,11 +29,11 @@ Use it to make something cool, have fun, and share what you've learned with othe
 // Vendors
 
 // bower:css
-@import "../vendors/normalize-css/normalize.css";
+@import '../vendors/normalize-css/normalize.css';
 // endbower
 
 // bower:scss
-@import "../vendors/tequila.scss/tequila.scss";
+@import '../vendors/tequila.scss/tequila.scss';
 // endbower
 
 // Utils
