--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -1,28 +1,28 @@
-// 
+//
 // Mixins
 //
 
 // Mobile first media queries
 @mixin respond-to($size) {
-	@media only screen and (min-width: $size) {
-		@content;
-	}
+  @media only screen and (min-width: $size) {
+    @content;
+  }
 }
 
 // Center block
 @mixin center-block {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 // Clearfix
 @mixin clearfix() {
-	content: "";
-	display: table;
+  content: '';
+  display: table;
 }
 
 // Clear after (not all clearfix need this also)
 @mixin clearfix-after() {
-	clear: both;
+  clear: both;
 }
