--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -1,32 +1,44 @@
-/*
- * Grid setup
- */
-
 $gutter: 3%;
 @include namespace('col-');
 
-.col-1-1 { @include fraction(1/1); }
-.col-1-2 { @include fraction(1/2); }
-.col-1-3 { @include fraction(1/3); }
-.col-1-4 { @include fraction(1/4); }
-.col-1-5 { @include fraction(1/5); }
-.col-1-6 { @include fraction(1/6); }
-.col-1-7 { @include fraction(1/7); }
-.col-1-8 { @include fraction(1/8); }
-.col-1-9 { @include fraction(1/9); }
-.col-1-10 { @include fraction(1/10); }
-.col-1-11 { @include fraction(1/11); }
-.col-1-12 { @include fraction(1/12); }
+// Asymmetric
+@for $i from 1 through 12 {
+  .col-1-#{$i} {
+    @include cols(12);
 
-.col-1 { @include cols(1); }
-.col-2 { @include cols(2); }
-.col-3 { @include cols(3); }
-.col-4 { @include cols(4); }
-.col-5 { @include cols(5); }
-.col-6 { @include cols(6); }
-.col-7 { @include cols(7); }
-.col-8 { @include cols(8); }
-.col-9 { @include cols(9); }
-.col-10 { @include cols(10); }
-.col-11 { @include cols(11); }
-.col-12 { @include cols(12); }
+    @include tequila-to(48em) {
+      @include fraction(1/$i);
+    }
+  }
+}
+
+@for $i from 1 through 12 {
+  .span-1-#{$i} {
+    @include cols(12);
+
+    @include tequila-to(48em) {
+      @include fraction(1/$i, 0%, 0%);
+    }
+  }
+}
+
+// Symmetric
+@for $i from 1 through 12 {
+  .col-#{$i} {
+    @include cols(12);
+
+    @include tequila-to(48em) {
+      @include cols($i);
+    }
+  }
+}
+
+@for $i from 1 through 12 {
+  .span-#{$i} {
+    @include cols(12);
+
+    @include tequila-to(48em) {
+      @include cols($i, 0%, 0%);
+    }
+  }
+}
