inner page design, sidebar navigation and breacrumbs added

--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,4 +1,4 @@
-/*
+/**
  * Main styling
  */
 
@@ -20,3 +20,99 @@
   }
 }
 
+
+/*
+ * Page
+ */
+
+.page-header-section {
+  text-align: center;
+  background-image: url('/wp-content/themes/whiteboard/img/soccer-bg.jpg');
+  // border-bottom: 6px solid darken($wb-gray-lighter, 8%);
+
+  h1 {
+    margin: 0;
+    font-size: 3em;
+    font-weight: normal;
+    font-family: $wb-factoria;
+    color: $wb-white;
+    text-shadow: 0 0 5px rgba(0,0,0,0.5);
+  }
+}
+
+.page-header-bg {
+  padding: 3em 0;
+  background-color: rgba(255,255,255,0.5);
+}
+
+.page-template-default {
+  #primary {
+    padding: 2em 0;
+  }
+}
+
+/*
+ * Breadcrumb
+ */
+
+$breadcrumb-color: rgba(44, 92, 174, 1);
+
+.breadcrumb-container {
+  background-color: $wb-gray-lighter;
+}
+
+#breadcrumbs {
+  padding: .2em 0;
+  overflow: hidden;
+
+  .breadcrumb_last,
+  a {
+    position: relative;
+    font-family: $wb-factoria;
+    color: $wb-white;
+    padding: 10px 0 10px 40px;
+    background: $breadcrumb-color;
+    text-align: center;
+
+    &:after {
+      content: " ";
+      display: block;
+      width: 0;
+      height: 0;
+      border-top: 50px solid transparent;           /* Go big on the size, and let overflow hide */
+      border-bottom: 50px solid transparent;
+      border-left: 30px solid $breadcrumb-color;
+      position: absolute;
+      top: 50%;
+      margin-top: -50px;
+      left: 100%;
+      z-index: 2;
+    }
+
+    &:before {
+      content: " ";
+      display: block;
+      width: 0;
+      height: 0;
+      border-top: 50px solid transparent;
+      border-bottom: 50px solid transparent;
+      border-left: 30px solid white;
+      position: absolute;
+      top: 50%;
+      margin-top: -50px;
+      margin-left: 1px;
+      left: 100%;
+      z-index: 1;
+    }
+  }
+}
+
+/*
+ * Full width
+ */
+
+.page-template-page-full-width {
+  #primary {
+    padding: 2em 0;
+  }
+}
