--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -3,86 +3,89 @@
  */
 
 /* Main navigation */
-.main-navigation {
-  float: right !important;
-  padding: .618em 0;
-}
 
-.nav-menu {
-  float: right;
-  margin-bottom: 0;
-}
-
-.menu-item,
-.page_item {
-
-  a {
-    padding: .5em 1em;
-    color: $wb-gray-darker;
-    font-family: $wb-factoria;
-    font-weight: bold;
-    text-transform: uppercase;
-    border-left: 1px solid $wb-gray-lighter;
+.site-header {
+  .main-navigation {
+    float: right !important;
+    padding: .618em 0;
   }
 
-  &:last-child {
-    border-right: 1px solid $wb-gray-lighter;
+  .nav-menu {
+    float: right;
+    margin-bottom: 0;
   }
-}
-
-.nav-menu > li:first-child,
-.menu-item,
-.page_item {
-  float: left;
-}
-
-/* Dropdown menu */
-.sub-menu,
-.children {
-  position: absolute;
-  display: none;
-  background-color: $wb-gray-lighter;
 
   .menu-item,
   .page_item {
-    border: 0;
-    display: block;
-    float: none;
+
+    a {
+      padding: .5em 1em;
+      color: $wb-gray-darker;
+      font-family: $wb-factoria;
+      font-weight: bold;
+      text-transform: uppercase;
+      border-left: 1px solid $wb-gray-lighter;
+    }
+
+    &:last-child {
+      border-right: 1px solid $wb-gray-lighter;
+    }
   }
 
+  .nav-menu > li:first-child,
+  .menu-item,
+  .page_item {
+    float: left;
+  }
+
+  /* Dropdown menu */
   .sub-menu,
   .children {
-    top: 0;
-    left: 100%;
-  }
-}
-
-/* Dropdown menu element */
-.menu-item-has-children,
-.page_item_has_children {
-  position: relative;
-
-  &:hover > .sub-menu,
-  &:hover > .children {
-    display: block;
-  }
-}
-
-/* Toggle button for mobile navigation */
-.menu-toggle,
-.main-navigation.toggled .nav-menu {
-  display: block;
-
-  @include respond-to(36em) {
+    position: absolute;
     display: none;
+    background-color: $wb-gray-lighter;
+
+    .menu-item,
+    .page_item {
+      border: 0;
+      display: block;
+      float: none;
+    }
+
+    .sub-menu,
+    .children {
+      top: 0;
+      left: 100%;
+    }
   }
-}
 
-.main-navigation .nav-menu {
-  display: none;
+  /* Dropdown menu element */
+  .menu-item-has-children,
+  .page_item_has_children {
+    position: relative;
 
-  @include respond-to(36em) {
+    &:hover > .sub-menu,
+    &:hover > .children {
+      display: block;
+    }
+  }
+
+  /* Toggle button for mobile navigation */
+  .menu-toggle,
+  .main-navigation.toggled .nav-menu {
     display: block;
+
+    @include respond-to(36em) {
+      display: none;
+    }
+  }
+
+  .main-navigation .nav-menu {
+    display: none;
+
+    @include respond-to(36em) {
+      display: block;
+    }
   }
 }
 
