--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -54,4 +54,20 @@
       }
     }
   }
+
+  ul.children a {
+    margin-left: .8em;
+    color: $wb-gray-darker;
+    font-size: .8em;
+    background-color: darken($wb-gray-lighter, 8%);
+
+    &:hover {
+      background-color: darken($wb-gray-lighter, 15%);
+    }
+  }
+
+  .page-item-56 .children,
+  .page-item-354 .children {
+    display: none;
+  }
 }
