--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -9,18 +9,18 @@
 .site-header {
   padding: 2em 0;
   color: $wb-white;
-  background-color: $wb-gray-darker;
+  // background-color: $wb-gray-darker;
 }
 
 .site-title {
   margin-top: 0;
 
   a {
-    color: $wb-white;
+    // color: $wb-white;
   }
 }
 
 .site-description {
-  color: $wb-white;
+  // color: $wb-white;
   font-weight: normal;
 }
