--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -15,8 +15,7 @@ $wb-body-bg: #fff !default;
 // Colors
 
 // Brand colors
-$wb-brand-primary: #00f;
-
+$wb-brand-primary: #2980b9;
 // Custom colors
 $wb-gray-base: #000;
 $wb-gray-darker: #222;
@@ -41,7 +40,7 @@ $wb-text-margin-bottom: $wb-baseline !default;
 
 $wb-link-color: $wb-brand-primary !default;
 $wb-link-decoration: none;
-$wb-link-hover-decoration: underline;
+$wb-link-hover-decoration: none;
 $wb-link-hover-color: darken($wb-link-color, 15%) !default;
 
 $wb-font-size-h1: 2.225#{$wb-base-unit};
