--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -16,14 +16,17 @@ $wb-body-bg: #fff !default;
 
 // Brand colors
 $wb-brand-primary: #2980b9;
+
 // Custom colors
-$wb-gray-base: #000;
+$wb-black: #000;
 $wb-gray-darker: #222;
 $wb-gray-dark: #333;
 $wb-gray: #555;
 $wb-gray-light: #777;
 $wb-gray-lighter: #eee;
 $wb-white: #fff;
+
+$wb-mobile-nav-link-bg: $wb-brand-primary;
 
 // Typography
 
