--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,9 +1,8 @@
-/*
+/**
  * Site footer
  */
 
 .site-footer {
-  padding: 2em 0;
-  background-color: $wb-gray-dark;
-  color: $wb-white;
+  padding: 4em 0;
+  text-align: center;
 }
