--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -3,7 +3,7 @@
  */
 
 /*
- *  Mobile nav toggle menu 
+ *  Mobile nav toggle menu
  */
 
 button.menu-toggle {
@@ -29,6 +29,7 @@ button.menu-toggle {
  */
 
 .nav-menu {
+  margin-top: 2em;
   float: left;
   width: 100%;
   position: relative;
@@ -45,25 +46,38 @@ button.menu-toggle {
     width: 100%;
     margin-bottom: 1px;
     color: $wb-white;
-    background-color: $wb-mobile-nav-link-bg;
+    background-color: $wb-gold;
 
     &:hover {
       @include respond-to(48em) {
-        background-color: darken($wb-mobile-nav-link-bg, 10%);
+        // background-color: darken($wb-gold, 10%);
+        color: $wb-gold;
       }
     }
 
     @include respond-to(48em) {
       float: left;
       width: auto;
-      padding: .3em 1em;
+      padding-left: 0;
+      color: #333;
+      font-weight: bold;
+      text-transform: uppercase;
+      background-color: transparent;
     }
+  }
+
+  .nav-separator {
+    margin-left: 1em;
   }
 
   &:first-child {
     border-left: 0;
     margin-left: 0;
     padding-left: 0;
+  }
+
+  &:last-child .nav-separator {
+    display: none;
   }
 
   @include respond-to(48em) {
@@ -140,7 +154,7 @@ button.menu-toggle {
     float: none;
 
     a {
-      @include respond-to(48em) { 
+      @include respond-to(48em) {
         padding: .5em 1em !important;
         width: 100%;
         font-size: .9em;
