--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -18,6 +18,7 @@ $wb-body-bg: #fff !default;
 $wb-brand-primary: #2980b9;
 
 // Custom colors
+$wb-gold: #947940;
 $wb-black: #000;
 $wb-gray-darker: #222;
 $wb-gray-dark: #333;
@@ -30,7 +31,7 @@ $wb-mobile-nav-link-bg: $wb-brand-primary;
 
 // Typography
 
-$wb-body-font: 'Roboto', sans-serif;
+$wb-body-font: 'ltc-goudy-oldstyle-pro', serif;
 $wb-mono-font: 'Menlo', Inconsolata, Consolas, Monaco, monospace;
 
 $wb-font-size: 16px;
