--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -5,4 +5,14 @@
 .site-footer {
   padding: 4em 0;
   text-align: center;
+  color: #fff;
+  background-color: #333;
+
+  a {
+    color: #fff;
+
+    &:hover {
+      opacity: .8;
+    }
+  }
 }
